@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-24T01:00:04Z",
-  "count_outdated" : 1000,
-  "uniques_outdated" : 606,
-  "count" : 1015,
-  "uniques" : 621,
+  "timestamp" : "2025-08-25T00:56:35Z",
+  "count_outdated" : 1002,
+  "uniques_outdated" : 608,
+  "count" : 1016,
+  "uniques" : 622,
   "clones" : [
-    {
-      "timestamp": "2025-08-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2025-08-11T00:00:00Z",
       "count": 1,
@@ -115,6 +106,15 @@
     },
     {
       "timestamp": "2025-08-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-08-24T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
