@@ -1,12 +1,7 @@
 {
   "count": 14,
-  "uniques": 4,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2025-08-10T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-08-11T00:00:00Z",
       "count": 1,
@@ -64,6 +59,11 @@
     },
     {
       "timestamp": "2025-08-23T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-08-24T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
