@@ -1,3 +1,12 @@
+2025-08-25T00:56:35Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17196197759 # 746
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-25
+* notice: last 14d: unq all: 3 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 606 1000 / 621 1015
+* notice: next accum: outdated-unq outdated-all / unq all: 608 1002 / 622 1016
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-08-10] / [2025-08-24]
+
 2025-08-24T01:00:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17182183731 # 745
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-24
